<resources>
    <string name="app_name">churraspetV3</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="bem_vindo">Bem-vindo</string>
    <string name="cadastro">CADASTRO</string>
    <string name="registrar">REGISTRAR</string>
    <string name="email">email\n</string>
    <string name="minhas_compras">Minhas Compras</string>
    <string name="Nichals">Nichals</string>
    <string name="nichals_emailteste_com_br">nichals@emailteste.com.br</string>
</resources>