<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_main_tittle_login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="300dp"
        android:text="@string/bem_vindo"
        android:textColor="@color/purple"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <EditText
        android:id="@+id/et_main_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="25dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_tittle_login_screen" />

    <EditText
        android:id="@+id/et_main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="25dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_main_username" />

    <Button
        android:id="@+id/btn_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="120dp"
        android:background="@color/purple"
        android:text="@string/login"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/et_main_password" />

    <TextView
        android:id="@+id/tv_main_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/cadastre_se"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_main_login" />

</androidx.constraintlayout.widget.ConstraintLayout>