<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ic_register"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_register_person"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_tittle_register_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:text="@string/cadastro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/et_cadastro_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_register"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_cadastro_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="25dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_tittle_register_screen"/>

    <EditText
        android:id="@+id/et_cadastro_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="25dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cadastro_username"/>

    <Button
        android:id="@+id/btn_cadastro_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="120dp"
        android:text="@string/registrar"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_cadastro_password" />


</androidx.constraintlayout.widget.ConstraintLayout>